--- a/style.css
+++ b/style.css
@@ -7,6 +7,17 @@ body {
     font-size: 0.8em;
 }
 
+.header .right {
+    text-align: center;
+    font-weight: bold;
+    font-size: 200%;
+    margin-top: 30px;
+}
+
+.header .right a {
+    color: #00B8DE;
+}
+
 .logo {
     margin: 10px;
     padding: 0px;
