--- a/fhiso.css
+++ b/fhiso.css
@@ -112,25 +112,26 @@ body {
     background: white;
 }
 
-.related, .sitemap ul {
+ul.related, .sitemap ul {
     display: block;
     list-style-type: none;
     padding: 0px;
 }
-
-.sitemap p, .sitemap ul {
-    margin-bottom: 0px;
-}
-.sitemap ul {
-    margin-top: 0px;
-}
-
-
 .related li, .sitemap li {
     display: block;
     margin: 2px 0px;
     padding: 0px 0px 0px 5px;
     border-left: 7px solid #CCC;
+}
+
+.content .sitemap p, .sitemap ul {
+    margin-bottom: 2px;
+}
+.sitemap ul {
+    margin-top: 0px;
+}
+.sitemap li {
+    padding-left: 1em;
 }
 
 .related li.index {
